<resources>
    <string name="app_name">Walltip</string>
    <string name="folder_a">Improve Work Habits</string>
    <string name="folder_b">Live Healthier</string>
    <string name="folder_c">Boost Positivity</string>
    <string name="folder_d">Make Your Suggestion</string>
    <string name="text_explaining_folder_content_a">Don\’t let distraction and procrastination define the way you work.
        Everyone has 24 hours a day, but your work life can become dramatically better with exciting results. Only one message a day.
        These walltips work like magic. Check out what your phone screen could look like.
    </string>
    <string name="text_explaining_folder_content_b">Not everyone has a personal trainer, but everyone can live a healthier life.
        Just a little reminder can inspire you to go for a jog or get a protein filled breakfast. Only one message a day.
        These walltips work like magic. Check out what your phone screen could look like.
    </string>
    <string name="text_explaining_folder_content_c">Don\’t let a bad hair day or a tough Monday stand in your way to success.
        A speck of positive thinking is all we might need for a better day and bigger achievements. Only one message a day.
        These walltips work like magic. Check out what your phone screen could look like.
    </string>
    <string name="text_app_purpose">This app changes wallpapers on your device based on your chosen
        goal that you want to achieve
    </string>
    <string name="show_me_the_pictures">Show me pictures</string>
    <string name="let_see_wallpapers_first">Check Wallpapers</string>
    <string name="ok_lets_do_it">Get The Magic</string>
    <string name="do_you_like_your_new_wallpaper">"Do you like your new wallpaper? "</string>
    <string name="alarm_set_from_device_boot_message">Alarm Set from device boot. Is it working?
    </string>
    <string name="main_activity_small_text">We check mobile phones more than 237 times a day on
        average. If we do that, why don\'t we set our phones for a better use.
    </string>
    <string name="this_is_company_logo_main_activity">This is company logo</string>
    <string name="exit_app_button_message">Your wallpaper will change in a few seconds :)</string>
    <string name="add_a_long_description_about_app_s_feature">Add a long description here about your
        app\'s important feature.
    </string>
    <string name="something_not_right">check your internet connection</string>
    <string name="retry">retry</string>
    <string name="choice_1">Even the most motivated of us — you, me, Tony Robbins — can feel
        unmotivated at times.
    </string>
    <string name="choice_2">Check out these ways to be healthier and live longer</string>
    <string name="choice_3">Life is easy with a positive attitude, wouldn\'t you agree? Well, easier
        at least
    </string>
    <string name="exit_app_textview_text">The Magic start at night. Have fun.</string>
    <string name="exit_app_button_text">ENJOY</string>
    <string name="choose_one_goal">Choose one goal</string>
    <string name="i_want_to">I want to</string>

    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="button_label">Show Dialog Box</string>
    <string name="dialog_button_label">Got it</string>
    <string name="intro_large_text">New Walltip.
        \nPowering your day.
        \nEvery day.</string>
    <string name="intro_small_text">Your phone is a magical thing. It must be, since you’re touching it 200 times a day. Use that magic to live your life to the max. Get practical tips and advice on your phone screen to keep focused on your goals or to find a path to success. Personal or professional, one walltip a day on your phone screen can change the way you live it. The choice is in your hands. Literally.
    </string>
    <string name="intro_button_text">Choose now</string>
    <string name="exit_text_large">The magic is already happening</string>
    <string name="exit_text_small">Make the most of your day with your phone.
        Want to get the Walltips on a different theme? You can always change your choice.
    </string>
    <string name="exit_app_greeting">Close the App and Enjoy</string>
    <string name="information_message_window_popup">"Have ideas on how Walltip could make your day even better? Let us know martynaskairys@gmail.com"
    </string>

    <string name="menu_feedback">Your questions / suggestions</string>
    <string name="menu_2">Ffff</string>
    <string name="email_subject_line">Questions, Suggestions, Ideas</string>


    <string-array name="tips_inspiration">
        <item>Sometimes the wrong choices bring us to the right places.  - Unknown</item>
        <item>You are afraid to die, and you’re afraid to live. What a way to exist – Neale Donald Walsch</item>
        <item>He who knows nothing is closer to the truth than he whose mind is filled with falsehoods and errors. – Thomas Jefferson</item>
        <item>Its not up to you how you fall. Its up to you how far you let yourself fall and how long it takes you to get back up and stand on your own two feet” - Sr. Tac Jeffrey Mitchell</item>
        <item>”Keep on going, and the chances are that you will stumble on something, perhaps when you are least expecting it. I never heard of anyone ever stumbling on something sitting down.” - Charles F. Kettering</item>
        <item>If you can’t be criticized for it, it’s probably not remarkable. Are you devoting yourself to something devoid of criticism?</item>
        <item>“It’s human nature to start taking things for granted again when danger isn’t banging loudly on the door.” – David Hackworth</item>
        <item>Push through the pain, and conquer the obstacles. Regardless of what you think today, it wont matter 5 years from now. SO DON’T BE AFRAID!  - Unknown</item>
        <item>Think outside of the box, create your own path in life. “You laugh at me because I am different; I laugh because you are all the same.”~ Daniel Knode</item>
        <item>”The two most powerful warriors are patience and time.” …so remember: great achievements take time, there is no overnight success. – Leo Tolstoy</item>
        <item>Even the greatest was once a beginner. Don’t be afraid to take that first step.  - Unknown</item>
        <item>Do you give as much energy to your dreams as you do to your fears?  - Unknown</item>
    </string-array>

    <string-array name="tips_health">
        <item>Have a glass of water</item>
        <item>Take a walk</item>
        <item>Eat more fruits</item>
        <item>Eat more vegetables</item>
        <item>Bring water bottle when you go out.</item>
        <item>Hang out with healthy people</item>
        <item>Go to bed early</item>
        <item>Smile more often</item>
        <item>Take the stairs whenever possible</item>
    </string-array>

    <string-array name="tips_positivity">
        <item>Express gratitude</item>
        <item>Practice acts of kindness</item>
        <item>Call an old friend or relative</item>
        <item>Talk with a positive person</item>
        <item>Ask for a hug from one person a day</item>
        <item>Enjoy a sunset or sunrise</item>
        <item>Learn to forgive</item>
        <item>Practice acts of kindness</item>
        <item>Savor life\'s joys</item>
        <item>Avoid social comparison</item>
        <item>Take care of your body</item>
    </string-array>

    <string name="info_message_regarding_google_launcher">If your wallpaper is not showing properly please contact us
        or go to Google Play Store</string>
    <string name="download_link_google_launcher">and Download Google Now Launcher</string>
    <string name="exit_button_text">Exit</string>
    <string name="exit_message">"Have a good day"</string>
    <string name="back_button_info_launcher_activity">Back to themes</string>
    <string name="transition_cover" translatable="false">transitionCover</string>
    <string name="about_text">Your phone is a magical thing. It must be, since you’re touching it 200 times a day. Use that magic to live your life to the max. Get practical tips and advice on your phone screen to keep focused on your goals or to find a path to success.
        \n        \nPersonal or professional, one walltip a day on your phone screen can change the way you live it. The choice is in your hands. Literally.
   </string>
    <string name="make_the_magic">make the magic happen</string>
    <string name="content_description_start_screen">This is Walltip</string>
    <string name="walltip">Walltip</string>
    <string name="your_daily_advisor">Your Daily Advisor</string>
    <string name="select_category">select category</string>
    <string name="wand">wand</string>
    <string name="about_screen_title">About Walltip</string>

</resources>
