<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.martynaskairys.walltip.StartActivity">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:src="@drawable/wizardonboard" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView3"
            android:layout_marginTop="32dp"
            android:padding="16dp"
            android:text="@string/intro_large_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textIsSelectable="false" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:padding="16dp"
            android:text="@string/intro_small_text"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignStart="@+id/imageView3"
            android:layout_below="@+id/textView2"
            android:layout_marginBottom="32dp"
            android:background="?android:attr/selectableItemBackground"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:text="@string/intro_button_text"
            android:textColor="#8C62CE" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="20dp"
            android:layout_height="50dp"
            android:layout_alignBottom="@+id/button"
            android:layout_below="@+id/textView2"
            android:layout_toEndOf="@+id/button"
            android:background="?android:attr/selectableItemBackground"
            android:padding="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/arrows" />
    </RelativeLayout>
</ScrollView>