<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context=".ChoosingFolderActivity">

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_folder_a"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@drawable/pic1a"
                android:padding="16dp"
                android:text="@string/folder_a"
                android:textColor="#ffffff"
                android:textSize="32sp" />


            <Button
                android:id="@+id/button_folder_b"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/pic1b"
                android:padding="16dp"
                android:text="@string/folder_b"
                android:textColor="#ffffff"
                android:textSize="32sp" />


            <Button
                android:id="@+id/button_folder_c"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/pic1c"
                android:padding="16dp"
                android:text="@string/folder_c"
                android:textColor="#ffffff"
                android:textSize="32sp" />


        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>


